字符串intern方法--奇怪的知识又增加了